hammer & knife cursor
Tried different approaches to the two state cursor problem. Radio buttons  approach didn't work for me. Eventually the target approach did.

--- a/index.html
+++ b/index.html
@@ -1,57 +1,78 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html id="html">
+<head id="head">
 	<meta charset="utf-8" />
 	<title>A template for a responsive restaurant menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet"> -->
+	 <link href="https://fonts.googleapis.com/css?family=Krona+One&display=swap" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
 	<!-- SUGGESTIONS FOR STYLING
 	https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
 	-->
 </head>
 <body>
 
-<header>
-	<h1>floating</h1>
-  <p>burgers</p>
-</header>
+	<a href="#html">coppyyyy</a>
+	<a href="#head">halllppp</a>
 
-<main>
+	<!-- Knife input -->
+	<!-- <input type="radio"  name="states" id="stateKnife"> -->
 
-	<img src="images/burger.svg" alt="Afbeelding burger">
+	<!-- Hammer input -->
+	<!-- <input type="radio" name="states" id="stateHammer"> -->
 
-	<img src="images/fries.svg" alt="Afbeelding fries">
+<div class="wrapper">
 
-	<img src="images/hotdog.svg" alt="Afbeelding hotdog">
+	<header>
+		<h1>floating</h1>
+		<p>burgers</p>
+	</header>
 
-	<img src="images/chicken_wing.svg" alt="Afbeelding chicken wing">
+	<main>
 
-</main>
+				<img src="images/burger.svg" alt="Afbeelding burger">
 
-<aside>
+				<img src="images/fries.svg" alt="Afbeelding fries">
 
-	<img src="images/knife.svg" alt="Afbeelding Knife">
+				<img src="images/hotdog.svg" alt="Afbeelding hotdog">
 
-	<img src="images/hammer.svg" alt="Afbeelding Hammer">
+				<img src="images/chicken_wing.svg" alt="Afbeelding chicken wing">
 
-</aside>
+	</main>
 
-<aside>
+	<aside>
 
-	<img src="images/ketchup.svg" alt="Afbeelding Ketchup">
+		<!-- Knife label with radio state -->
+		<label for="stateKnife">
+			<img src="images/knife.svg" alt="Afbeelding Knife">
+		</label>
 
-	<img src="images/mayonnaise.svg" alt="Afbeelding Mayonnaise">
+		<!-- Hammer label with radio state -->
+		<label for="stateHammer">
+			<img src="images/hammer.svg" alt="Afbeelding Hammer"/>
+		</label>
 
-</aside>
+	</aside>
 
-<footer>
+	<aside>
 
-	<img src="images/paper_bag.svg" alt="Afbeelding paper bag">
+		<img src="images/ketchup.svg" alt="Afbeelding Ketchup">
 
-</footer>
+		<img src="images/mayonnaise.svg" alt="Afbeelding Mayonnaise">
 
+	</aside>
 
-<!-- HTML taken and adjusted from https://codepen.io/julesforrest/pen/VqXvgQ -->
+	<footer>
+
+		<img src="images/paper_bag.svg" alt="Afbeelding paper bag">
+
+	</footer>
+
+</div>
+
 
 </body>
 </html>
