darkmode & cursor states
- darkmode
- 2 cursor states

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html">
+<html id="something">
 <head id="head">
 	<meta charset="utf-8" />
 	<title>A template for a responsive restaurant menu</title>
@@ -13,65 +13,70 @@
 	https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
 	-->
 </head>
-<body>
+<body id="darkmode">
 
-	<a href="#html">coppyyyy</a>
-	<a href="#head">halllppp</a>
+	<div class="wrapper">
 
-	<!-- Knife input -->
-	<!-- <input type="radio"  name="states" id="stateKnife"> -->
+		<header>
+			<h1>floating</h1>
+			<p>burgers</p>
+		</header>
 
-	<!-- Hammer input -->
-	<!-- <input type="radio" name="states" id="stateHammer"> -->
+		<main>
 
-<div class="wrapper">
+					<img src="images/burger.svg" alt="Afbeelding burger">
+					<img src="images/darkmode/darkmode_burger.svg" data-light alt="Afbeelding burger">
 
-	<header>
-		<h1>floating</h1>
-		<p>burgers</p>
-	</header>
+					<img src="images/fries.svg" alt="Afbeelding fries">
+					<img src="images/darkmode/darkmode_fries.svg" data-light alt="Afbeelding fries">
 
-	<main>
+					<img src="images/hotdog.svg" alt="Afbeelding hotdog">
+					<img src="images/darkmode/darkmode_hotdog.svg" data-light alt="Afbeelding hotdog">
 
-				<img src="images/burger.svg" alt="Afbeelding burger">
+					<img src="images/chicken_wing.svg" alt="Afbeelding chicken wing">
+					<img src="images/darkmode/darkmode_chicken_wing.svg" data-light alt="Afbeelding chicken wing">
 
-				<img src="images/fries.svg" alt="Afbeelding fries">
 
-				<img src="images/hotdog.svg" alt="Afbeelding hotdog">
+		</main>
 
-				<img src="images/chicken_wing.svg" alt="Afbeelding chicken wing">
+		<aside>
 
-	</main>
 
-	<aside>
+			<a href="#something">
+				<img src="images/knife.svg" alt="Afbeelding Knife">
+				<img src="images/darkmode/darkmode_knife.svg" data-light alt="Afbeelding Knife">
+			</a>
 
-		<!-- Knife label with radio state -->
-		<label for="stateKnife">
-			<img src="images/knife.svg" alt="Afbeelding Knife">
-		</label>
 
-		<!-- Hammer label with radio state -->
-		<label for="stateHammer">
-			<img src="images/hammer.svg" alt="Afbeelding Hammer"/>
-		</label>
+			<a href="#head">
+				<img src="images/hammer.svg" alt="Afbeelding Hammer"/>
+				<img src="images/darkmode/darkmode_hammer.svg" data-light alt="A dark hammer">
+			</a>
 
-	</aside>
+		</aside>
 
-	<aside>
+		<a href="#darkmode" data-dark>toggle darkmode</a>
+		<a href="#" data-light>back to light</a>
 
-		<img src="images/ketchup.svg" alt="Afbeelding Ketchup">
 
-		<img src="images/mayonnaise.svg" alt="Afbeelding Mayonnaise">
+		<aside>
 
-	</aside>
+			<img src="images/ketchup.svg" alt="Afbeelding Ketchup">
+			<img src="images/darkmode/darkmode_ketchup.svg" data-light alt="Afbeelding Ketchup">
 
-	<footer>
+			<img src="images/mayonnaise.svg" alt="Afbeelding Mayonnaise">
+			<img src="images/darkmode/darkmode_mayonnaise.svg" data-light alt="Afbeelding Mayonnaise">
 
-		<img src="images/paper_bag.svg" alt="Afbeelding paper bag">
+		</aside>
 
-	</footer>
+		<footer>
 
-</div>
+			<img src="images/paper_bag.svg" alt="Afbeelding paper bag">
+			<img src="images/darkmode/darkmode_paper_bag.svg" data-light alt="Afbeelding paper bag">
+
+		</footer>
+
+	</div>
 
 
 </body>
