--- a/test.html
+++ b/test.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="css/test.css">
     <title>Test state CSS</title>
   </head>
-  <body>
+  <body id="showtime">
 
     <input type="radio" name="states" id="stateKnife">
     <input type="radio" name="states" id="stateHammer">
@@ -14,6 +14,9 @@
       <p>Dit is een test voor states met CSS</p>
     </div>
 
+    <section id="vibes">
+      Dit is een sectie.
+    </section>
 
   </body>
 </html>
