--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>A template for a responsive restaurant menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/test.css">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet"> -->
 	 <link href="https://fonts.googleapis.com/css?family=Krona+One&display=swap" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
@@ -15,32 +15,121 @@
 </head>
 <body id="darkmode">
 
-	<div class="wrapper">
+	<header>
 
-		<header>
+		<nav>
+			<a href="#darkmode" data-dark>toggle darkmode</a>
+			<a href="#" data-light>back to light</a>
+		</nav>
+
+		<div>
 			<h1>floating</h1>
 			<p>burgers</p>
-		</header>
+		</div>
+
+	</header>
+
+	<div>
+
+		<!-- <header>
+
+			<nav>
+				<a href="#darkmode" data-dark>toggle darkmode</a>
+				<a href="#" data-light>back to light</a>
+			</nav>
+
+			<div>
+				<h1>floating</h1>
+				<p>burgers</p>
+			</div>
+
+		</header> -->
 
 		<main>
 
-					<img src="images/burger.svg" alt="Afbeelding burger">
-					<img src="images/darkmode/darkmode_burger.svg" data-light alt="Afbeelding burger">
+					<div data-dark><img src="images/burger.svg" alt="Afbeelding burger"></div>
+					<!-- <div data-light><img src="images/darkmode/darkmode_burger.svg" data-light alt="Afbeelding burger"></div> -->
+					<svg tabindex="1" version="1.1" id="burger" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 63.8 54.7" xml:space="preserve" enable-background="new 0 0 63.8 54.7">
+						<g class="bread_seeds movable">
+							<polygon id="bread_top" points="1.1 19.3 1.8 10.7 8.4 4.7 21.8 1 41.8 1 54.9 4.5 61.8 10.7 62.5 19.3 " style="fill:none;stroke-miterlimit:10;stroke-width:2;stroke:#B22D2D"/>
+					    <circle class="seed_9" cx="12.1" cy="11.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_8" cx="16.8" cy="7.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_7" cx="21.8" cy="11.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_6" cx="26.8" cy="7.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_5" cx="31.8" cy="11.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_4" cx="36.8" cy="7.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_3" cx="41.8" cy="11.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_2" cx="46.8" cy="7.7" r="1" fill="#B22D2D"/>
+					    <circle class="seed_1" cx="51.8" cy="11.7" r="1" fill="#B22D2D"/>
+					  </g>
+					  <polygon class="bread_bottom" points="1.1 45.2 1.8 50.9 5.8 53.7 56.9 53.7 61.4 51.2 62.8 46 61.8 42.8 1.8 42.8 " style="fill:none;stroke-miterlimit:10;stroke-width:2;stroke:#B22D2D"/>
+					  <path class="meat" d="M59.3 32.6H4.7c-1.4 0-2.5-1.1-2.5-2.5l0 0c0-1.4 1.1-2.5 2.5-2.5h54.6c1.4 0 2.5 1.1 2.5 2.5l0 0C61.8 31.5 60.7 32.6 59.3 32.6z" style="fill:none;stroke-miterlimit:10;stroke-width:2;stroke:#B22D2D"/>
+					  <polyline class="salad" points="3.8 36.6 11.4 38.7 21.8 36.4 31.8 39 41.8 36.4 50.8 38.7 59.7 36.8 " style="fill:none;stroke-miterlimit:10;stroke-width:2;stroke:#B22D2D"/>
+					  <g class="cheese_group">
+					    <polyline class="cheese_2" points="3.8 23.6 15.8 23.6 31.7 34.6 47.8 23.6 59.9 23.6 " style="fill:none;stroke-miterlimit:10;stroke-width:2;stroke:#B22D2D"/>
+					    <polygon class="cheese_1" points="15.8 22.6 47.8 22.6 31.8 33.5 " fill="#FFF"/>
+					  </g>
+						<div id="prijs1">
+							<p><span>Burger</span> €2,50</p>
+						</div>
+					</svg>
 
-					<img src="images/fries.svg" alt="Afbeelding fries">
-					<img src="images/darkmode/darkmode_fries.svg" data-light alt="Afbeelding fries">
+					<!-- <span><img src="images/darkmode/darkmode_information_icon.svg" alt="Afbeelding information button"></span> -->
 
-					<img src="images/hotdog.svg" alt="Afbeelding hotdog">
-					<img src="images/darkmode/darkmode_hotdog.svg" data-light alt="Afbeelding hotdog">
 
-					<img src="images/chicken_wing.svg" alt="Afbeelding chicken wing">
-					<img src="images/darkmode/darkmode_chicken_wing.svg" data-light alt="Afbeelding chicken wing">
+					<div data-dark><img src="images/fries.svg" alt="Afbeelding fries"></div>
+					<!-- <div data-light><img src="images/darkmode/darkmode_fries.svg" data-light alt="Afbeelding fries"></div> -->
+					<svg tabindex="2" version="1.1" id="Fries" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 19.1 24" enable-background="new 0 0 19.1 24" xml:space="preserve">
+					  <g id="fries_group">
+					    <polygon id="fries_5" fill="none" stroke="#B22D2D" stroke-width="0.75" stroke-miterlimit="10" points="4.7 16.4 3.5 16.5 1.1 3.1 3.4 2.8 "/>
+					    <polygon id="fries_4" fill="none" stroke="#B22D2D" stroke-width="0.75" stroke-miterlimit="10" points="7.9 14 6.7 14.2 4.3 0.7 6.6 0.4 "/>
+					    <polygon id="fries_3" fill="none" stroke="#B22D2D" stroke-width="0.75" stroke-miterlimit="10" points="9.9 17.1 8.7 17.1 8.2 3.4 10.5 3.5 "/>
+					    <polygon id="fries_2" fill="none" stroke="#B22D2D" stroke-width="0.75" stroke-miterlimit="10" points="12.5 15.3 11.3 15.2 12 1.5 14.3 1.7 "/>
+					    <polygon id="fries_1" fill="none" stroke="#B22D2D" stroke-width="0.75" stroke-miterlimit="10" points="14.9 17.1 13.7 16.9 16.1 3.4 18.4 3.9 "/>
+					  </g>
+					  <path id="bucket" fill="#FFFFFF" stroke="#B22D2D" stroke-width="0.75" stroke-miterlimit="10" d="M0.5 10.3l3.2 13.3h12l3-13.3c-2.6-0.6-4.3-0.3-5.4 0.2 -1.8 0.7-2.3 1.7-3.8 1.7 -1.6 0-2-1.1-4-1.8C4.4 10 2.7 9.7 0.5 10.3z"/>
+					</svg>
+					<!-- <span><img src="images/darkmode/darkmode_information_icon.svg" alt="Afbeelding information button"></span> -->
+					<div id="prijs2">
+						<p><span>Fries</span> €1,75</p>
+					</div>
 
+					<div data-dark><img src="images/hotdog.svg" alt="Afbeelding hotdog"></div>
+					<!-- <div data-light><img src="images/darkmode/darkmode_hotdog.svg" data-light alt="Afbeelding hotdog"></div> -->
+					<svg tabindex="3" version="1.1" id="HotDog" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 61.6 61.6" enable-background="new 0 0 61.6 61.6" xml:space="preserve">
+					  <g id="inner">
+					    <path id="broodje" fill="#FFFFFF" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" d="M52.8 36.4L36.4 52.7c-4.7 4.7-12.3 4.7-17 0l-9.5-9.5c-4.7-4.7-4.7-12.3 0-17L26.2 9.8c4.7-4.7 12.3-4.7 17 0l9.5 9.5C57.4 24.1 57.4 31.7 52.8 36.4z"/>
+							<g id="move">
+								<path class="worst" fill="#FFFFFF" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" d="M3.1 56.9l1.6 1.6c2.8 2.8 7.5 2.8 10.3 0L58.5 15c2.8-2.8 2.8-7.5 0-10.3l-1.6-1.6c-2.8-2.8-7.5-2.8-10.3 0L3.1 46.6C0.3 49.4 0.3 54.1 3.1 56.9z"/>
+						    <path class="curry_1" fill="#B22D2D" d="M13.9 44.1c0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4v-3h-2v3c0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4v3h2v-3c0-1.1 0.9-2 2-2C12.1 48.1 13.9 46.3 13.9 44.1z"/>
+						    <path class="curry_2" fill="#B22D2D" d="M52.7 11.5c0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4 0 1.1-0.9 2-2 2 -2.2 0-4 1.8-4 4v2h2v-2c0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4 0-1.1 0.9-2 2-2 2.2 0 4-1.8 4-4v-3h-2V11.5z"/>
+							</g>
+					  </g>
+					</svg>
+					<!-- <span><img src="images/darkmode/darkmode_information_icon.svg" alt="Afbeelding information button"></span> -->
+					<div id="prijs3">
+						<p><span>Hot dog<span> €2,00</p>
+					</div>
+
+					<div data-dark><img src="images/chicken_wing.svg" alt="Afbeelding chicken wing"></div>
+					<!-- <div data-light><img src="images/darkmode/darkmode_chicken_wing.svg" data-light alt="Afbeelding chicken wing"></div> -->
+					<svg tabindex="4" version="1.1" id="Chicken_wing" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" viewBox="0 0 47.9 39.6" enable-background="new 0 0 47.9 39.6" xml:space="preserve">
+					  <path id="chicken_x5F_meat" fill="none" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" d="M28 12.3c-7.2-0.6-12.9 2.7-23.2 8.9 -0.6 0.4-1.5 0.9-2.3 2C0 26.7 0.7 33.4 4.7 36.6c2.4 1.9 5.3 2 7 2 1.5 0 4.8 0.1 7.5-2 1.4-1.1 1.3-1.8 4.4-7.8 2.1-3.9 3.1-5.9 4.1-6.8 1.8-1.6 3.3-2 4.5-4.1 0.4-0.7 1.3-2.3 0.7-3.6C32.6 13.7 31.8 12.6 28 12.3z"/>
+					  <g id="bone_group">
+					    <path class="bone_4" fill="none" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" d="M27.7 12.2c0.1 0 9.4-5.9 9.4-5.9L38 5.7l0.3-0.2C38 5.7 37.7 5.9 37.4 6 34.2 8.2 31 10.2 27.7 12.2z"/>
+					    <line class="bone_3" fill="none" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" x1="33" y1="15.4" x2="41.1" y2="9.4"/>
+					    <path class="bone_2" fill="none" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" d="M37.4 6.3c-0.8-2-0.2-4.1 1.1-4.9C40.6 0 44.2 2.5 44.2 4c0 0.5-0.8 0.9-0.7 1.1s0.9-0.3 1.6-0.1c1.1 0.2 2 1.9 1.8 3.4s-1.5 2.8-3.2 3.1"/>
+					    <path class="bone_1" fill="none" stroke="#B22D2D" stroke-width="2" stroke-miterlimit="10" d="M44.6 11.2c-0.3 0.1-1.5 0.5-2.8-0.1 -1-0.4-1.6-1.2-1.8-1.5"/>
+					  </g>
+					</svg>
+					<!-- <span><img src="images/darkmode/darkmode_information_icon.svg" alt="Afbeelding information button"></span> -->
+					<div id="prijs4">
+						<p><span>Chicken wing</span> €1,50</p>
+					</div>
 
 		</main>
 
 		<aside>
-
 
 			<a href="#something">
 				<img src="images/knife.svg" alt="Afbeelding Knife">
@@ -55,8 +144,8 @@
 
 		</aside>
 
-		<a href="#darkmode" data-dark>toggle darkmode</a>
-		<a href="#" data-light>back to light</a>
+		<!-- <a href="#darkmode" data-dark>toggle darkmode</a>
+		<a href="#" data-light>back to light</a> -->
 
 
 		<aside>
@@ -69,14 +158,16 @@
 
 		</aside>
 
-		<footer>
-
-			<img src="images/paper_bag.svg" alt="Afbeelding paper bag">
-			<img src="images/darkmode/darkmode_paper_bag.svg" data-light alt="Afbeelding paper bag">
-
-		</footer>
-
 	</div>
+
+	<footer>
+
+		<!-- <img src="images/paper_bag.svg" alt="Afbeelding paper bag"> -->
+		<img src="images/papercutbag.png" alt="Afbeelding paper bag">
+		<!-- <img src="images/darkmode/darkmode_paper_bag.svg" data-light alt="Afbeelding paper bag"> -->
+		<img src="images/darkmode/papercutbag.png" data-light alt="Afbeelding paper bag">
+
+	</footer>
 
 
 </body>
